kubernetes/applications/scanservjs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scanservjs
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scanservjs
  template:
    metadata:
      labels:
        app: scanservjs
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: scanservjs
          image: sbs20/scanservjs:3.1.0
          securityContext:
            privileged: false
          resources:
            requests:
              cpu: 250m
              ephemeral-storage: 1Gi
              memory: 32Mi
            limits:
              ephemeral-storage: 2Gi
              memory: 128Mi
          ports:
            - containerPort: 8080
