kubernetes/applications/scanservjs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scanservjs
  namespace: apps
  labels:
    app: scanservjs
spec:
  selector:
    app: scanservjs
  type: LoadBalancer
  loadBalancerIP: 192.168.5.11
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
