kubernetes/applications/scanservjs/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: scanserv-http-route
  namespace: apps
  annotations:
    gethomepage.dev/description: Web interface for the printer's scanner
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Utilities
    gethomepage.dev/icon: https://raw.githubusercontent.com/sbs20/scanservjs/refs/heads/master/app-ui/src/icons/favicon.ico
    gethomepage.dev/name: scanserv
    gethomepage.dev/pod-selector: "app=scanservjs"
  labels:
    app: scanservjs
spec:
  parentRefs:
    - name: internal-gateway
      namespace: kube-system
  hostnames:
    - "scanner.mcmumf.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: scanservjs
          port: 8080
