kubernetes/applications/scanservjs/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scanservjs-ingress
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    gethomepage.dev/description: Web interface for the printer's scanner
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Utilities
    gethomepage.dev/icon: https://raw.githubusercontent.com/sbs20/scanservjs/refs/heads/master/app-ui/src/icons/favicon.ico
    gethomepage.dev/name: scanserv
    gethomepage.dev/pod-selector: "app=scanservjs"
spec:
  ingressClassName: cilium
  tls:
    - hosts:
        - &host scanner.mcmumf.dev
      secretName: scanservjs-cert
  rules:
    - host: *host
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scanservjs
                port:
                  number: 8080
